# ultimateASR

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  components.json  electron-builder.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  vite.main.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
bench/: README.md
docs/: ARCHITECTURE.md  INSTALL.md
installers/linux/: postinst.sh
installers/macos/: entitlements.mac.plist
installers/windows/: nsis-include.nsh
scripts/: build-sidecar.mjs  gen-app-icon.mjs  gen-tray-icons.mjs
sidecar/: pyproject.toml  pytest.ini  ultimate_asr.spec
sidecar/tests/: conftest.py  test_cloud_engine.py  test_device_manager.py  test_engine_factory.py  test_hardware.py  test_llm_base.py  test_llm_providers.py  test_main_loop.py  test_model_manager.py  test_parakeet_engine.py  test_paths.py  test_recorder.py  test_rpc.py  test_rpc_methods.py  test_settings.py  test_vad.py  test_vocabulary.py  test_whisper_engine.py
sidecar/ultimate_asr/: __main__.py  hardware.py  paths.py  recording_session.py  rpc.py  settings.py
sidecar/ultimate_asr/audio/: recorder.py  vad.py
sidecar/ultimate_asr/engine/: cloud_engine.py  factory.py  parakeet_engine.py  whisper_engine.py
sidecar/ultimate_asr/llm/: anthropic_provider.py  base.py  llamacpp_provider.py  ollama_provider.py  openai_provider.py
src/main/: auto-paste.ts  hotkey.ts  icons.ts  index.ts  ipc.ts  recording-controller.ts  sidecar-resolve.ts  sidecar.ts  (+3 more)
(+59 files in other folders)
