[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate_asr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "PyAudio>=0.2.14",
  "onnxruntime>=1.18",
  "huggingface_hub>=0.24",
  "openai>=1.40",
  "anthropic>=0.34",
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.optional-dependencies]
whisper = ["pywhispercpp>=1.2"]
parakeet = ["onnx-asr>=0.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ultimate_asr*"]
